src/objects/GoogleAuthSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store Access Token &amp; Refresh Token that would be generated at the first time with other details</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleClientID__c</fullName>
        <label>GoogleClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleClientSecret__c</fullName>
        <label>GoogleClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10K_Domain__c</fullName>
        <label>10K Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Google Auth Settings</label>
</CustomObject>